--- a/Style.css
+++ b/Style.css
@@ -100,7 +100,7 @@ input[type="checkbox"]{
     color: cyan;
   }
 }
-.content{
+.content-1{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -112,9 +112,87 @@ input[type="checkbox"]{
   color: #183D3D;
 }
 
-.content div{
+.content-1 div{
   font-size: 40px;
   font-weight: 700;
+}
+/* caraousel style */
+.slideshow-container{
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.mySlides{
+  display: none;
+}
+
+.prev, .next{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #183D3D;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next{
+  right: 0;
+  border-radius: 3px 0 0 3px; 
+}
+
+.prev:hover, .next:hover{
+  background-color: #183D3D;
+  color: white;
+}
+
+.text{
+  color: white;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.numbertext{
+  color: #183D3D;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute; 
+  top: 0;
+}
+
+.dot{
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #183D3D;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover{
+  background-color: #183D3D;
+}
+
+.fade{
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade{
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 /* ####################### */
@@ -173,21 +251,6 @@ body {
     align-items: flex-start;
 }
 
-.article-text .row {
-  display: flex;
-}
-
-.article-text .row .content{
-  flex: 1 1 30rem;
-}
-
-.article-text .row .image{
-  flex: 1 1 30rem;
-}
-
-.article-text .row .image img{
-  width: 100%;
-}
 /* Style for aside*/
 aside {
   flex: 1;
@@ -196,6 +259,9 @@ aside {
 .card{
   justify-content: space-between; 
   align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  background-color: #183D3D;
 }
 
 /* Style for footer*/
